--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
+	namespace "com.sidlatau.flutterdocumentpicker"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
